--- a/pep-0550.rst
+++ b/pep-0550.rst
@@ -73,7 +73,7 @@ generator with different precisions in parallel::
 An even scarier example would be using decimals to represent money
 in an async/await application: decimal calculations can suddenly
 lose precision in the middle of processing a request.  Currently,
-bugs like this are extremely hard to trace and fix.
+bugs like this are extremely hard to find and fix.
 
 Another common need for web applications is to have access to the
 current request object, or security context, or, simply, the request
@@ -118,7 +118,7 @@ but the former explicitly supports asynchronous code.
 Goals
 =====
 
-The goal of the PEP is to provide a more reliable alternative to
+The goal of this PEP is to provide a more reliable alternative to
 ``threading.local()``.  It should be explicitly designed to work with
 Python execution model, equally supporting threads, generators, and
 coroutines.
@@ -172,7 +172,7 @@ along with a set of Python APIs and C APIs to interact with it.
 
 EC is implemented using an immutable mapping.  Every modification
 of the mapping produces a new copy of it.  To illustrate what it
-means let's look at how we work with tuples in Python::
+means let's compare it to how we work with tuples in Python::
 
     a0 = ()
     a1 = a0 + (1,)
@@ -182,9 +182,9 @@ means let's look at how we work with tuples in Python::
     # a1 is (1,)
     # a2 is (1, 2)
 
-Manipulating an EC object is similar::
+Manipulating an EC object would be similar::
 
-    a0 = ExecutionContext()
+    a0 = EC()
     a1 = a0.set('foo', 'bar')
     a2 = a1.set('spam', 'ham')
 
@@ -210,7 +210,7 @@ in the `New APIs`_ section.
 
 * ``sys.set_execution_context_item(key, value)``: get the
   current EC of the executing thread.  Add a ``key``/``value``
-  item to it, which will produce a new EC' object.  Set the
+  item to it, which will produce a new EC object.  Set the
   new object as the current one for the executing thread.
   In pseudo-code::
 
@@ -220,7 +220,7 @@ in the `New APIs`_ section.
       tstate.exec_context = ec2
 
 Note, that some important implementation details and optimizations
-are omitted here, and will be covered in later sections of the PEP.
+are omitted here, and will be covered in later sections of this PEP.
 
 Now let's see how Execution Contexts work with regular multi-threaded
 code, generators, and coroutines.
@@ -233,9 +233,9 @@ For regular Python code, EC behaves just like a thread-local.  Any
 modification of the EC object produces a new one, which is immediately
 set as the current one for the thread state.
 
-.. figure:: pep-0550/functions.gif
+.. figure:: pep-0550/functions.png
    :align: center
-   :width: 80%
+   :width: 90%
 
    Figure 1.  Execution Context flow in a thread.
 
@@ -279,41 +279,41 @@ execution context within one Task should be visible to all coroutines
 scheduled within it.  Any execution context modifications, however,
 must not be visible to other Tasks executing within the same thread.
 
-To achieve this, a small set of modifications needs to be done
-to the coroutine object implementation:
+To achieve this, a small set of modifications to the coroutine object
+is needed:
 
 * When a coroutine object is instantiated, it saves a reference to
   the current execution context object to its ``cr_execution_context``
   attribute.
 
 * Coroutine's ``.send()`` and ``.throw()`` methods are modified as
-  follows (in pseudo-code)::
+  follows (in pseudo-C)::
 
-    if self.cr_isolated_execution_context:
+    if coro->cr_isolated_execution_context:
         # Save a reference to the current execution context
-        old_ec = tstate.execution_context
+        old_context = tstate->execution_context
 
         # Set our saved execution context as the current
         # for the current thread.
-        tstate.execution_context = self.cr_execution_context
+        tstate->execution_context = coro->cr_execution_context
 
         try:
             # Perform the actual `Coroutine.send()` or
             # `Coroutine.throw()` call.
-            return self.send(...)
+            return coro->send(...)
         finally:
             # Save a reference to the updated execution_context.
             # We will need it later, when `.send()` or `.throw()`
             # are called again.
-            self.ct_execution_context = tstate.execution_context
+            coro->cr_execution_context = tstate->execution_context
 
             # Restore thread's execution context to what it was before
             # invoking this coroutine.
-            tstate.execution_context = old_ec
+            tstate->execution_context = old_context
     else:
         # Perform the actual `Coroutine.send()` or
         # `Coroutine.throw()` call.
-        return self.send(...)
+        return coro->send(...)
 
 * ``cr_isolated_execution_context`` is a new attribute on coroutine
   objects.  Set to ``True`` by default, it makes any execution context
@@ -331,25 +331,29 @@ to the coroutine object implementation:
   ``asyncio.ensure_future()`` to schedule a Task), all execution
   context modifications are guaranteed to stay within the Task.
 
+* We always work with ``tstate->exec_context``.  We use
+  ``coro->cr_execution_context`` only to store coroutine's execution
+  context when it is not executing.
+
 Figure 2 below illustrates how execution context mutations work with
 coroutines.
 
-.. figure:: pep-0550/coroutines.gif
+.. figure:: pep-0550/coroutines.png
    :align: center
-   :width: 80%
+   :width: 90%
 
    Figure 2.  Execution Context flow in coroutines.
 
 In the above diagram:
 
-* When "Coroutine 1" is created, it saves a reference to the current
+* When "coro1" is created, it saves a reference to the current
   execution context "2".
 
 * If it makes any change to the context, it will have its own
   execution context branch "2.1".
 
-* When it awaits on "Coroutine 2", any subsequent changes it does to
-  the execution context are visible to "Coroutine 1", but not outside
+* When it awaits on "coro2", any subsequent changes it does to
+  the execution context are visible to "coro1", but not outside
   of it.
 
 In code::
@@ -414,25 +418,28 @@ is never modified by the interpreter.  ``yield from o`` expression in
 regular generators that are not decorated with ``types.coroutine``,
 is semantically equivalent to ``for v in o: yield v``.
 
-.. figure:: pep-0550/generators.gif
+.. figure:: pep-0550/generators.png
    :align: center
-   :width: 80%
+   :width: 90%
 
    Figure 3.  Execution Context flow in a generator.
 
 In the above diagram:
 
-* When "Generator 1" is created, it saves a reference to the current
+* When "gen1" is created, it saves a reference to the current
   execution context "2".
 
 * If it makes any change to the context, it will have its own
   execution context branch "2.1".
 
-* When it awaits on "Generator 2" is created, it saves a reference to
-  the current execution context for it -- "2.1".
+* When "gen2" is created, it saves a reference to the current
+  execution context for it -- "2.1".
 
-* Any subsequent execution context updated in "Generator 2" will only
-  be visible to "Generator 2".  Ditto for "Generator 1".
+* Any subsequent execution context updated in "gen2" will only
+  be visible to "gen2".
+
+* Likewise, any context changes that "gen1" will do after it
+  created "gen2" will not be visible to "gen2".
 
 In code::
 
@@ -475,7 +482,7 @@ which will output::
     foo: spam
     main: ham
 
-As wee see, any modification of the execution context in a generator
+As we see, any modification of the execution context in a generator
 is visible only to the generator itself.
 
 There is one use-case where it is desired for generators to affect
@@ -516,7 +523,7 @@ transparent support of it to greenlet.
 New APIs
 ========
 
-Even though the PEP adds a number of new APIs, please keep in mind,
+Even though this PEP adds a number of new APIs, please keep in mind,
 that most Python users will likely ever use only two of them:
 ``sys.get_execution_context_item()`` and
 ``sys.set_execution_context_item()``.
@@ -594,43 +601,271 @@ to switch it to a different implementation later.  More on that
 in the `Implementation Details`_ section.
 
 
+Modifications in Standard Library
+=================================
+
+* ``contextlib.contextmanager`` was updated to flip the new
+  ``gi_isolated_execution_context`` attribute on the generator.
+
+* ``asyncio.events.Handle`` object now captures the current
+  execution context when it is created, and uses the saved
+  execution context to run the callback (with
+  ``ExecutionContext.run()`` method.)  This makes
+  ``loop.call_soon()`` to run callbacks in the execution context
+  they were scheduled.
+
+  No modifications in ``asyncio.Task`` or ``asyncio.Future`` were
+  necessary.
+
+Some standard library modules like ``warnings`` and ``decimal``
+can be updated to use new execution contexts.  This will be considered
+in separate issues if this PEP is accepted.
+
+
+Backwards Compatibility
+=======================
+
+This proposal preserves 100% backwards compatibility.
+
+
+Performance
+===========
+
 Implementation Details
-======================
+----------------------
 
 The new ``PyExecContextData`` object is wrapping a ``dict`` object.
 Any modification requires creating a shallow copy of the dict.
 
-While working on the reference implementation of the PEP, we were
+While working on the reference implementation of this PEP, we were
 able to optimize ``dict.copy()`` operation **5.5x**, see [4]_ for
 details.
 
+.. figure:: pep-0550/dict_copy.png
+   :align: center
+   :width: 100%
 
-Modifications in Standard Library
-=================================
+   Figure 4.
 
-1. ``contextlib.contextmanager`` was updated to flip the new
-   ``gi_isolated_execution_context`` attribute on the generator.
+Figure 4 shows that the performance of immutable dict implemented
+with shallow copying is expectedly O(n) for the ``set()`` operation.
+However, this is tolerable until dict has more than 100 items
+(1 ``set()`` takes about a microsecond.)
 
-2. ``asyncio.events.Handle`` object now captures the current
-   execution context when it is created, and uses the saved
-   execution context to run the callback (with
-   ``ExecutionContext.run()`` method.)  This makes
-   ``loop.call_soon()`` to run callbacks in the execution context
-   they were scheduled.
+Judging by the number of modules that need EC in Standard Library
+it is likely that real world Python applications will use
+significantly less than 100 execution context variables.
 
-   No modifications in ``asyncio.Task`` or ``asyncio.Future`` were
-   necessary.
+The important point is that the cost of accessing a key in
+Execution Context is always O(1).
 
-Some standard library modules like ``warnings`` and ``decimal``
-can be updated to use new execution contexts.  This will be considered
-in separate issues if the PEP is accepted.
+If the ``set()`` operation performance is a major concern, we discuss
+alternative approaches that have O(1) or close ``set()`` performance
+in `Alternative Immutable Dict Implementation`_, `Faster C API`_, and
+`Copy-on-write Execution Context`_ sections.
+
+
+Generators and Coroutines
+-------------------------
+
+Using a microbenchmark for generators and coroutines from :pep:`492`
+([12]_), it was possible to observe 0.5 to 1% performance degradation
+for generators and coroutines.
+
+asyncio echoserver microbechmarks from the uvloop project [13]_
+showed 1-1.5% performance degradation for asyncio code.
+
+asyncpg benchmarks [14]_, that execute more code and closer to a
+real-world application did not exhibit any detectable performance
+change.
+
+
+Overall Performance Impact
+--------------------------
+
+The total number of changed lines in the ceval loop is 2 -- in the
+``YIELD_FROM`` opcode implementation.  Only performance of generators
+and coroutines can be affected by the proposal.
+
+This was confirmed by running Python Performance Benchmark Suite
+[15]_, which demonstrated that there is no difference between
+3.7 master branch and this PEP reference implementation branch
+(full benchmark results can be found here [16]_.)
 
 
 Design Considerations
 =====================
 
-Why set_execution_context_item removes item when value is None?
----------------------------------------------------------------
+Alternative Immutable Dict Implementation
+-----------------------------------------
+
+Languages like Clojure and Scala use Hash Array Mapped Tries (HAMT)
+to implement high performance immutable collections [5]_, [6]_.
+
+Immutable mappings implemented with HAMT have O(log\ :sub:`32`\ N)
+performance for both ``set()`` and ``get()`` operations, which will
+be essentially O(1) for relatively small mappings in EC.
+
+To assess if HAMT can be used for Execution Context, we implemented
+it in CPython [7]_.
+
+.. figure:: pep-0550/hamt_vs_dict.png
+   :align: center
+   :width: 100%
+
+   Figure 5.  Benchmark code can be found here: [9]_.
+
+Figure 5 shows that HAMT indeed displays O(1) performance for all
+benchmarked dictionary sizes.  For dictionaries with less than 100
+items, HAMT is a bit slower than Python dict/shallow copy.
+
+.. figure:: pep-0550/lookup_hamt.png
+   :align: center
+   :width: 100%
+
+   Figure 6.  Benchmark code can be found here: [10]_.
+
+Figure 6 below shows comparison of lookup costs between Python dict
+and an HAMT immutable mapping.  HAMT lookup time is 30-40% worse
+than Python dict lookups on average, which is a very good result,
+considering how well Python dicts are optimized.
+
+Note, that according to [8]_, HAMT design can be further improved.
+
+The bottom line is that the current approach with implementing
+an immutable mapping with shallow-copying dict will likely perform
+adequately in real-life applications.  The HAMT solution is more
+future proof, however.
+
+The proposed API is designed in such a way that the underlying
+implementation of the mapping can be changed completely without
+affecting the Execution Context `Specification`_, which allows
+us to switch to HAMT at some point if necessary.
+
+
+Copy-on-write Execution Context
+-------------------------------
+
+The implementation of Execution Context in .NET is different from
+this PEP. .NET uses copy-on-write mechanism and a regular mutable
+mapping.
+
+One way to implement this in CPython would be to have two new
+fields in ``PyThreadState``:
+
+* ``exec_context`` pointing to the current Execution Context mapping;
+* ``exec_context_copy_on_write`` flag, set to ``0`` initially.
+
+The idea is that whenever we are modifying the EC, the copy-on-write
+flag is checked, and if it is set to ``1``, the EC is copied.
+
+Modifications to Coroutine and Generator ``.send()`` and ``.throw()``
+methods described in the `Coroutines`_ section will be almost the
+same, except that in addition to the ``gi_execution_context`` they
+will have a ``gi_exec_context_copy_on_write`` flag.  When a coroutine
+or a generator starts, the flag will be set to ``1``.  This will
+ensure that any modification of the EC performed within a coroutine
+or a generator will be isolated.
+
+This approach has one advantage:
+
+* For Execution Context that contains a large number of items,
+  copy-on-write is a more efficient solution than the shallow-copy
+  dict approach.
+
+However, we believe that copy-on-write disadvantages are more
+important to consider:
+
+* Copy-on-write behaviour for generators and coroutines makes
+  EC semantics less predictable.
+
+  With immutable EC approach, generators and coroutines always
+  execute in the EC that was current at the moment of their
+  creation.  Any modifications to the outer EC while a generator
+  or a coroutine is executing are not visible to them::
+
+    def generator():
+        yield 1
+        print(get_execution_context_item('key'))
+        yield 2
+
+    set_execution_context_item('key', 'spam')
+    gen = iter(generator())
+    next(gen)
+    set_execution_context_item('key', 'ham')
+    next(gen)
+
+  The above script will always print 'spam' with immutable EC.
+
+  With a copy-on-write approach, the above script will print 'ham'.
+  Now, consider that ``generator()`` was refactored to call some
+  library function, that uses Execution Context::
+
+    def generator():
+        yield 1
+        some_function_that_uses_decimal_context()
+        print(get_execution_context_item('key'))
+        yield 2
+
+  Now, the script will print 'spam', because
+  ``some_function_that_uses_decimal_context`` forced the EC to copy,
+  and ``set_execution_context_item('key', 'ham')`` line did not
+  affect the ``generator()`` code after all.
+
+* Similarly to the previous point, ``sys.ExecutionContext.run()``
+  method will also become less predictable, as
+  ``sys.get_execution_context()`` would still return a reference to
+  the current mutable EC.
+
+  We can't modify ``sys.get_execution_context()`` to return a shallow
+  copy of the current EC, because this would seriously harm
+  performance of ``asyncio.call_soon()`` and similar places, where
+  it is important to propagate the Execution Context.
+
+* Even though copy-on-write requires to shallow copy the execution
+  context object less frequently, copying will still take place
+  in coroutines and generators.  In which case, HAMT approach will
+  perform better for medium to large sized execution contexts.
+
+All in all, we believe that the copy-on-write approach introduces
+very subtle corner cases that could lead to bugs that are
+exceptionally hard to discover and fix.
+
+The immutable EC solution in comparison is always predictable and
+easy to reason about.  Therefore we believe that any slight
+performance gain that the copy-on-write solution might offer is not
+worth it.
+
+
+Faster C API
+------------
+
+Packages like numpy and standard library modules like decimal need
+to frequently query the global state for some local context
+configuration.  It is important that the APIs that they use is as
+fast as possible.
+
+The proposed ``PyThreadState_SetExecContextItem`` and
+``PyThreadState_GetExecContextItem`` functions need to get the
+current thread state with ``PyThreadState_GET()`` (fast) and then
+perform a hash lookup (relatively slow).  We can eliminate the hash
+lookup by adding three additional C API functions:
+
+* ``Py_ssize_t PyExecContext_RequestIndex(char *key_name)``:
+  a function similar to the existing ``_PyEval_RequestCodeExtraIndex``
+  introduced :pep:`523`.  The idea is to request a unique index
+  that can later be used to lookup context items.
+
+  The ``key_name`` can later be used by ``sys.ExecutionContext`` to
+  introspect items added with this API.
+
+* ``PyThreadState_SetExecContextIndexedItem(Py_ssize_t index, PyObject *val)``
+  and ``PyThreadState_GetExecContextIndexedItem(Py_ssize_t index)``
+  to request an item by its index, avoiding the cost of hash lookup.
+
+
+Why setting a key to None removes the item?
+-------------------------------------------
 
 Consider a context manager::
 
@@ -664,30 +899,78 @@ would look like the following::
                 set_execution_context_item('x', old_x)
 
 
-Can ``PyThreadState_GetDict()`` API be enhanced to work as EC?
---------------------------------------------------------------
+Can we fix ``PyThreadState_GetDict()``?
+---------------------------------------
 
-No
+``PyThreadState_GetDict`` is a TLS, and some of its existing users
+might depend on it being just a TLS.  Changing its behaviour to follow
+the Execution Context semantics would break backwards compatibility.
 
 
+PEP 521
+-------
 
-HAMT
-====
+:pep:`521` proposes an alternative solution to the problem:
+enhance Context Manager Protocol with two new methods: ``__suspend__``
+and ``__resume__``.  To make it compatible with async/await,
+the Asynchronous Context Manager Protocol will also need to be
+extended with ``__asuspend__`` and ``__aresume__``.
 
-O(log\ :sub:`32`\ N)
+This allows to implement context managers like decimal context and
+``numpy.errstate`` for generators and coroutines.
+
+The following code::
+
+    class Context:
+        def __enter__(self):
+            self.old_x = get_execution_context_item('x')
+            set_execution_context_item('x', 'something')
+
+        def __exit__(self, *err):
+            set_execution_context_item('x', self.old_x)
+
+would become this::
+
+    class Context:
+        def __enter__(self):
+            self.old_x = get_execution_context_item('x')
+            set_execution_context_item('x', 'something')
+
+        def __suspend__(self):
+            set_execution_context_item('x', self.old_x)
+
+        def __resume__(self):
+            set_execution_context_item('x', 'something')
+
+        def __exit__(self, *err):
+            set_execution_context_item('x', self.old_x)
+
+Besides complicating the protocol, the implementation will likely
+negatively impact performance of coroutines, generators, and any code
+that uses context managers, and will notably complicate the
+interpreter implementation.  It also does not solve the leaking state
+problem for greenlet/gevent.
+
+:pep:`521` also does not provide any mechanism to propagate state
+in a local context, like storing a request object in an HTTP request
+handler to have better logging.
+
+
+Can Execution Context be implemented outside of CPython?
+--------------------------------------------------------
+
+Because async/await code needs an event loop to run it, an EC-like
+solution canbe implemented in a limited way for coroutines.
+
+Generators, on the other hand, do not have an event loop or
+trampoline, making it impossible to intercept their ``yield`` points
+outside of the Python interpreter.
 
 
 Reference Implementation
 ========================
 
-Previous Approaches
--------------------
-
-1. Use FrameState
-2. Use TState + immutable
-3. Encapsulate dict + cow in one object
-4. Current approach -- dict in one object, cow is in TState
-
+The reference implementation can be found here: [11]_.
 
 
 References
@@ -701,14 +984,36 @@ References
 
 .. [4] http://bugs.python.org/issue31179
 
-.. [5] https://gist.github.com/1st1/9004813d5576c96529527d44c5457dcd
+.. [5] https://en.wikipedia.org/wiki/Hash_array_mapped_trie
 
+.. [6] http://blog.higher-order.net/2010/08/16/assoc-and-clojures-persistenthashmap-part-ii.html
+
+.. [7] TODO: link to hamt impl
+
+.. [8] https://michael.steindorfer.name/publications/oopsla15.pdf
+
+.. [9] https://gist.github.com/1st1/9004813d5576c96529527d44c5457dcd
+
+.. [10] https://gist.github.com/1st1/dbe27f2e14c30cce6f0b5fddfc8c437e
+
+.. [11] TODO: ref implementation
+
+.. [12] https://www.python.org/dev/peps/pep-0492/#async-await
+
+.. [13] https://github.com/MagicStack/uvloop/blob/master/examples/bench/echoserver.py
+
+.. [14] https://github.com/MagicStack/pgbench
+
+.. [15] https://github.com/python/performance
+
+.. [16] https://gist.github.com/1st1/6b7a614643f91ead3edf37c4451a6b4c
 
 
 Copyright
 =========
 
 This document has been placed in the public domain.
+
 
 ..
    Local Variables:
